Fix mgrid images on mobile with \!important

--- a/themes/less/assets/css/application.scss
+++ b/themes/less/assets/css/application.scss
@@ -625,9 +625,10 @@ span.link-subtitle {
 
 @media (max-width: 767px) {
   .mgrid img {
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
+    width: 100% !important;
+    height: auto !important;
+    left: 0 !important;
+    top: 0 !important;
+    position: relative !important;
   }
 }
